k3s/manifests/network-policies/namespaces/automation/semaphore/semaphore-network.yaml
# Semaphore Egress rules

# Semaphore allow Egress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-semaphore-egress
  namespace: automation
spec:
  podSelector:
    matchLabels:
      app: semaphore
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.0/24

---

# Semaphore Ingress rules

# Semaphore allow Ingress

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-semaphore-ingress
  namespace: automation
spec:
  podSelector:
    matchLabels:
      app: semaphore
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 3000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: homepage
